# aioresult

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
aioresult/: __init__.py  _aio.py  _src.py  _version.py  _wait.py
docs/: Makefile  make.bat
docs/source/: class_hierarchy.puml  conf.py  docs.rst  future.rst  history.rst  index.rst  overview.rst  result_capture.rst  wait.rst
docs/source/_static/: custom.css
tests/: test_all.py  type_tests.py
