[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "aioresult._version.__version__"}

[tool.setuptools]
include-package-data = true

[project]
name = "aioresult"
dynamic = ["version"]
description = "Capture the result of a Trio or anyio task"
license = {file = "LICENSE"}
authors = [{name = "Arthur Tacca"}]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "sniffio>=1.0.0",
    "typing_extensions>=4.1.0",  # First version with TypeVarTuple/Unpack
]

keywords = ["async", "anyio", "trio", "result", "future", "nursery", "taskgroup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AnyIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/arthur-tacca/aioresult"
Documentation = "https://aioresult.readthedocs.io/en/v1.0/overview.html"

[project.optional-dependencies]
docs = ["sphinx>=6.1", "sphinxcontrib-trio", "sphinx_rtd_theme", "trio", "anyio"]
tests = ["pytest", "coverage", "trio", "anyio", "exceptiongroup; python_version < '3.11'"]

[tool.mypy]
python_version = "3.9"
files = ["aioresult/", "tests/"]
disable_error_code = ["func-returns-value"]

strict = true
local_partial_types = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

[tool.pyright]
include = ["aioresult/", "tests/"]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
